fixed an issue with my footer which made my screen too large so I had lots of white space at the side of my screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,7 @@ footer {
 .mailing-form,
 .mailing-text {
     display: flex;
-     width: 100px;
-    height: 55px;
+   
     
 }
 /* ​subscription input in footer */
@@ -94,9 +93,7 @@ footer {
     border: 1px solid #a1b894;
     width: 100%;
     background: #fafafa;
-     width: 300px;
-    height: 50px;
-    
+   
 }
 ​
 .mailing-form button {
@@ -110,8 +107,6 @@ footer {
  background-color: #f39a82;
     border: 0;
 }
-
-
 
 /* about page */
 #about-container{
